Fix infobox component overflow

--- a/src/scss/layout/_common.scss
+++ b/src/scss/layout/_common.scss
@@ -227,6 +227,7 @@ a {
 }
 
 .infobox {
+	word-break: break-word;
 	font-size: 1.125rem;
 	padding: 2rem;
 	height: 100%;
